--- a/Poke24Server/Poke24Server.csproj
+++ b/Poke24Server/Poke24Server.csproj
@@ -144,9 +144,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Database\" />
-    <Folder Include="Hubs\" />
-    <Folder Include="Models\" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\BundleConfig.cs" />
@@ -181,11 +178,17 @@
     <Compile Include="Areas\HelpPage\SampleGeneration\SampleDirection.cs" />
     <Compile Include="Areas\HelpPage\SampleGeneration\TextSample.cs" />
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.cs" />
-    <Compile Include="Controllers\HomeController.cs" />
-    <Compile Include="Controllers\ValuesController.cs" />
+    <Compile Include="Controllers\TabsController.cs" />
+    <Compile Include="Controllers\UserController.cs" />
+    <Compile Include="Database\DataContext.cs" />
+    <Compile Include="Database\Tabs.cs" />
+    <Compile Include="Database\Users.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Hubs\TabHub.cs" />
+    <Compile Include="Models\LoginViewModel.cs" />
+    <Compile Include="Models\TabViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
