--- a/Poke24Server/packages.config
+++ b/Poke24Server/packages.config
@@ -11,8 +11,10 @@
   <package id="Microsoft.AspNet.Razor.zh-Hans" version="3.1.2" targetFramework="net45" />
   <package id="Microsoft.AspNet.SignalR" version="2.1.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.SignalR.Core" version="2.1.0" targetFramework="net45" />
+  <package id="Microsoft.AspNet.SignalR.Core.zh-Hans" version="2.0.2" targetFramework="net45" />
   <package id="Microsoft.AspNet.SignalR.JS" version="2.1.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.SignalR.SystemWeb" version="2.1.0" targetFramework="net45" />
+  <package id="Microsoft.AspNet.SignalR.zh-Hans" version="2.0.2" targetFramework="net45" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.Web.Optimization.zh-Hans" version="1.1.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi" version="5.1.2" targetFramework="net45" />
@@ -28,7 +30,10 @@
   <package id="Microsoft.AspNet.WebPages.zh-Hans" version="3.1.2" targetFramework="net45" />
   <package id="Microsoft.Owin" version="2.0.1" targetFramework="net45" />
   <package id="Microsoft.Owin.Host.SystemWeb" version="2.0.1" targetFramework="net45" />
+  <package id="Microsoft.Owin.Host.SystemWeb.zh-Hans" version="2.1.0" targetFramework="net45" />
   <package id="Microsoft.Owin.Security" version="2.0.1" targetFramework="net45" />
+  <package id="Microsoft.Owin.Security.zh-Hans" version="2.1.0" targetFramework="net45" />
+  <package id="Microsoft.Owin.zh-Hans" version="2.1.0" targetFramework="net45" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="Modernizr" version="2.6.2" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="6.0.3" targetFramework="net45" />
