--- a/Poke24Server/packages.config
+++ b/Poke24Server/packages.config
@@ -28,7 +28,8 @@
   <package id="Microsoft.AspNet.WebApi.WebHost.zh-Hans" version="5.1.2" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebPages" version="3.1.2" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebPages.zh-Hans" version="3.1.2" targetFramework="net45" />
-  <package id="Microsoft.Owin" version="2.0.1" targetFramework="net45" />
+  <package id="Microsoft.Owin" version="2.1.0" targetFramework="net45" />
+  <package id="Microsoft.Owin.Cors" version="2.1.0" targetFramework="net45" />
   <package id="Microsoft.Owin.Host.SystemWeb" version="2.0.1" targetFramework="net45" />
   <package id="Microsoft.Owin.Host.SystemWeb.zh-Hans" version="2.1.0" targetFramework="net45" />
   <package id="Microsoft.Owin.Security" version="2.0.1" targetFramework="net45" />
