--- a/testClient/testClient.csproj
+++ b/testClient/testClient.csproj
@@ -132,6 +132,7 @@
     <Content Include="login.html" />
     <Content Include="list.html" />
     <Content Include="tab.html" />
+    <Content Include="taba.html" />
     <Content Include="temp.html" />
     <Content Include="Web.config" />
   </ItemGroup>
