--- a/testClient/testClient.csproj
+++ b/testClient/testClient.csproj
@@ -60,6 +60,7 @@
     <Content Include="a.html" />
     <Content Include="app\rules.js" />
     <Content Include="b.html" />
+    <Content Include="config.xml" />
     <Content Include="Content\bootstrap-theme.css" />
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
